[gd_scene load_steps=7 format=3 uid="uid://c5mainmenu01"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_focus"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.18, 0.18, 0.28, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.95, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_disabled"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.12, 0.12, 0.18, 0.5)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.35, 0.5)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.2, 0.2, 0.3, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.5, 0.7, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.1, 0.1, 0.18, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.95, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.15, 0.15, 0.22, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35, 0.35, 0.5, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "VERSOS DE HÉROE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="BtnNewGame" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../BtnQuit")
focus_neighbor_bottom = NodePath("../BtnMagicMan")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.2, 1)
theme_override_colors/font_focus_color = Color(1, 0.95, 0.2, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Nueva Partida"

[node name="BtnMagicMan" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../BtnNewGame")
focus_neighbor_bottom = NodePath("../BtnClassroom")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.3, 0.7, 1, 1)
theme_override_colors/font_focus_color = Color(0.3, 0.7, 1, 1)
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Magic Man"

[node name="BtnClassroom" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../BtnMagicMan")
focus_neighbor_bottom = NodePath("../BtnTheWall")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.6, 0.3, 1)
theme_override_colors/font_focus_color = Color(1, 0.6, 0.3, 1)
theme_override_colors/font_color = Color(1, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Aula (Debug)"

[node name="BtnTheWall" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../BtnClassroom")
focus_neighbor_bottom = NodePath("../BtnQuit")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_focus_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_color = Color(0.9, 0.4, 0.3, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "The Wall (Debug)"

[node name="BtnQuit" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../BtnTheWall")
focus_neighbor_bottom = NodePath("../BtnNewGame")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.2, 1)
theme_override_colors/font_focus_color = Color(1, 0.95, 0.2, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
text = "Salir"

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.55, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "Apañeros Producciones"
horizontal_alignment = 1
vertical_alignment = 2
